--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/ui": "^4.1.0",
+    "@unhead/vue": "^2.0.19",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
