--- a/deployment/app.sandbox.yaml
+++ b/deployment/app.sandbox.yaml
@@ -10,10 +10,12 @@ envs:
 
 services:
   - name: web
-    github:
-      repo: dgavranic/progitest     # replace with your repo
-      branch: sandbox
-    dockerfile_path: './Dockerfile'         # relative path to Dockerfile in repo (used to build this component). See note.
+    image:
+      registry_type: GHCR
+      registry: ghcr.io
+      repository: dgavranic/progitest
+      registry_credentials: ${GHCR_CREDENTIALS}
+      digest: ${SAMPLE_DIGEST}
     environment_slug: python
     instance_count: 1
     instance_size_slug: apps-s-1vcpu-0.5gb
@@ -54,25 +56,7 @@ services:
         type: GENERAL
         scope: RUN_TIME
     health_check:
-      protocol: HTTP
-      path: /
+      http_path: /
       port: 8000
       initial_delay_seconds: 10
-      check_interval_seconds: 10
       timeout_seconds: 5
-      healthy_threshold: 2
-      unhealthy_threshold: 3
-    resources:
-      cpu: 500m
-      memory: 500Mi
-    routes:
-      # Main app route
-      - path: /
-
-      # Static assets route — served directly by App Platform (no Gunicorn)
-      - path: /static/*
-        preserve_path_prefix: true
-        static_files:
-          destination: /app/staticfiles
-          index_document: index.html
-          error_document: index.html
