--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -142,7 +142,6 @@ dev = [
     "ipdb==0.13.13",
     "mypy==1.18.2",
     "pre-commit==4.3.0",
-    "psycopg[binary]==3.2.10",
     "pytest==8.4.2",
     "pytest-django==4.11.1",
     "pytest-sugar==1.1.1",
@@ -184,8 +183,8 @@ dependencies = [
     "gunicorn==23.0.0",
     "hiredis==3.2.1",
     "pillow==11.3.0",
-    "psycopg[c]==3.2.10",
     "python-slugify==8.0.4",
     "redis==6.4.0",
     "whitenoise==6.11.0",
+    "pyjwt==2.10.1"
 ]
