--- a/.github/workflows/sandbox.yml
+++ b/.github/workflows/sandbox.yml
@@ -1,8 +1,6 @@
 name: Build, Push and Deploy Sandbox Environment
 
-on:
-  push:
-    branches: [sandbox]
+on: workflow_dispatch
 
 permissions:
   contents: read
@@ -14,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: 'sandbox'
       - name: Log in to the Container registry
         uses: docker/login-action@v3.3.0
         with:
@@ -26,7 +26,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: ghcr.io/${{ github.repository }}-sandbox:latest
       - name: Deploy the app
         uses: digitalocean/app_action/deploy@v2
         env:
