--- a/deployment/sandbox/docker-compose.yaml
+++ b/deployment/sandbox/docker-compose.yaml
@@ -7,7 +7,7 @@ x-healthcheck: &django-health
 
 services:
   web:
-    image: ghcr.io/dgavranic/progitest:latest
+    image: ghcr.io/dgavranic/progitest-sandbox:latest
     restart: unless-stopped
     env_file: .env
     depends_on:
