--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,17 @@
 {
   "name": "playforward-frontend",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
     "lint": "eslint . --fix"
   },
   "dependencies": {
@@ -24,6 +22,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^6.2.0",
     "@playwright/test": "^1.55.1",
     "@tailwindcss/vite": "^4.1.16",
     "@tsconfig/node22": "^22.0.2",
@@ -44,7 +43,6 @@
     "typescript": "~5.9.0",
     "vite": "npm:rolldown-vite@latest",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.0",
-    "@antfu/eslint-config": "^6.2.0"
+    "vue-tsc": "^3.1.0"
   }
 }
