--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -27,7 +27,7 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ github.repository }}-prod:latest
-      - name: Deploy to Sandbox Server
+      - name: Deploy to Production Server
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: playforward.dedyn.io
@@ -35,6 +35,4 @@ jobs:
           key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.DEPLOY_SSH_PASSPHRASE }}
           script: |
-            cd /home/deploy/app/playforward-prod
-            docker compose pull
-            docker compose up -d --remove-orphans
+            bash /home/deploy/app/scripts/deploy.sh prod
