--- a/.github/workflows/sandbox.yml
+++ b/.github/workflows/sandbox.yml
@@ -38,6 +38,4 @@ jobs:
           key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.DEPLOY_SSH_PASSPHRASE }}
           script: |
-            cd /home/deploy/app/playforward-sandbox
-            docker compose pull
-            docker compose up -d --remove-orphans
+            bash /home/deploy/app/scripts/deploy.sh sandbox
