--- a/.github/workflows/sandbox.yml
+++ b/.github/workflows/sandbox.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/playforward-sandbox:latest
+          tags: ghcr.io/maucikamau/playforward-sandbox:latest
       - name: Deploy to Sandbox Server
         uses: appleboy/ssh-action@v0.1.7
         with:
