--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -173,7 +173,7 @@ requires-python = "==3.13.*"
 dependencies = [
     "argon2-cffi==25.1.0",
     "django==5.2.7",
-    "django-allauth[mfa]==65.12.0",
+    "django-allauth==65.12.0",
     "django-anymail==13.1",
     "django-cors-headers==4.9.0",
     "django-environ==0.12.0",
@@ -188,5 +188,7 @@ dependencies = [
     "python-slugify==8.0.4",
     "redis==6.4.0",
     "whitenoise==6.11.0",
-    "pyjwt==2.10.1"
+    "pyjwt==2.10.1",
+    "django-unfold>=0.69.0",
+    "cryptography>=46.0.3",
 ]
