--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,12 @@
   },
   "dependencies": {
     "@nuxt/ui": "^4.1.0",
+    "@tanstack/vue-query": "^5.90.7",
     "@unhead/vue": "^2.0.19",
     "@vueuse/motion": "^3.0.3",
+    "ky": "^1.14.0",
+    "overlayscrollbars": "^2.12.0",
+    "overlayscrollbars-vue": "^0.5.9",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
@@ -44,6 +48,7 @@
     "typescript": "~5.9.0",
     "vite": "npm:rolldown-vite@latest",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.0"
+    "vue-tsc": "^3.1.0",
+    "zod": "^4.1.12"
   }
 }
