--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -184,7 +184,7 @@ dependencies = [
     "gunicorn==23.0.0",
     "hiredis==3.2.1",
     "pillow==11.3.0",
-    "psycopg[c]==3.2.10",
+    "psycopg[binary]==3.2.10",
     "python-slugify==8.0.4",
     "redis==6.4.0",
     "whitenoise==6.11.0",
