--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^6.2.0",
     "@playwright/test": "^1.55.1",
-    "@tailwindcss/vite": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.17",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.18.6",
@@ -44,9 +44,10 @@
     "jiti": "^2.5.1",
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
-    "tailwindcss": "^4.1.16",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.9.0",
     "vite": "npm:rolldown-vite@latest",
+    "vite-plugin-inspect": "^11.3.3",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.1.0",
     "zod": "^4.1.12"
